--- a/content/404.html
+++ b/content/404.html
@@ -1,25 +1,26 @@
+{{ define "header"}}
+    {{- partial "_shared/navbar.html" . -}}
+{{ end }}
+
 {{ define "main" }}
-  <section class="section-sm text-center">
+<div class="main-content">
     <div class="container">
-      <div class="row justify-center">
-        <div class="sm:col-10 md:col-8 lg:col-6">
-          <span
-            class="text-[8rem] block font-bold text-dark dark:text-darkmode-dark">
-            404
-          </span>
-          <h1 class="h2 mb-4">Pagina nao encontrada</h1>
-          <div class="content">
-            <p>
-              A pagina que voce esta tentando acessar pode ter sido movida ou removida.
-            </p>
-          </div>
-          <a
-            href="{{ site.BaseURL | relLangURL }}"
-            class="btn btn-primary mt-8">
-            De volta a Home
-          </a>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10 error">
+                <div class="mainheading">
+                    <h1 class="posttitle">{{ .Title }}</h1> 
+                </div>
+                <div class="article-post">
+                    Oops! Acho que o que voce estava procurando nao esta mais aqui.<br>
+                    Clique <a href="/">aqui</a> para voltar ao inicio.                
+                </div>
+            </div>
+            <div class="col-md-1"></div>
         </div>
-      </div>
     </div>
-  </section>
+</div>
+{{ end }}
+
+{{ define "footer"}}
 {{ end }}
